--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,3 @@
 {
-  "presets": ["es2015", "react", "stage-0"],
-  "plugins": [
-    "transform-decorators-legacy",
-    ["module-resolver", {
-      "root": ["./src"],
-      "extensions": [".js", ".jsx"]
-    }]
-  ]
+  "presets": ["env", "react", "stage-0"]
 }
