--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rimraf dist",
     "test": "jest ./tests/*/*.test.*",
-    "build": "webpack -p",
+    "build": "webpack -p --progress --env.production",
     "lint": "eslint src/* --cache --cache-location=.cache/eslint --ext .js,.jsx",
     "lint:fix": "npm run lint -- --fix",
     "precommit": "lint-staged",
@@ -47,6 +47,8 @@
     "jsdoc-babel": "^0.3.0",
     "lint-staged": "^4.2.3",
     "module-resolver": "^1.0.0",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-test-renderer": "^15.6.2",
     "redux-mock-store": "^1.3.0",
     "rimraf": "^2.6.2",
@@ -57,8 +59,6 @@
     "@deskpro/react-components": "^1.1.0",
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
     "redux-form": "^7.0.4",
     "redux-thunk": "^2.2.0"
   },
