--- a/package.json
+++ b/package.json
@@ -42,13 +42,11 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.4.0",
-    "gh-pages-deploy": "^0.4.2",
     "jest": "^21.2.1",
     "jsdoc-babel": "^0.3.0",
     "lint-staged": "^4.2.3",
     "module-resolver": "^1.0.0",
     "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
     "react-test-renderer": "^15.6.2",
     "redux-mock-store": "^1.3.0",
     "rimraf": "^2.6.2",
@@ -58,7 +56,9 @@
     "@deskpro/apps-sdk-core": "^1.0.0-beta.22",
     "prop-types": "^15.6.0",
     "react": "^15.6.1",
+    "react-redux": "^5.0.6",
     "react-svg-inline": "^2.0.1",
+    "redux": "^3.7.2",
     "redux-form": "^7.0.4",
     "redux-thunk": "^2.2.0"
   },
