Adds lib folder and removes dist from repo

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@deskpro/apps-sdk-react",
   "version": "0.1.0",
   "description": "A react-based javascript SDK for building DeskPRO Apps powered by the React library",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "private": false,
   "scripts": {
     "clean": "rimraf dist",
     "test": "jest ./tests/*/*.test.*",
-    "build": "webpack -p --progress --env.production",
+    "build": "rm -rf lib/* && babel --loose es6.modules -d lib/ src/ && webpack -p --progress --env.production",
     "lint": "eslint src/* --cache --cache-location=.cache/eslint --ext .js,.jsx",
     "lint:fix": "npm run lint -- --fix",
     "precommit": "lint-staged",
