--- a/package.json
+++ b/package.json
@@ -48,8 +48,7 @@
     "jsdoc-babel": "^0.3.0",
     "lint-staged": "^4.2.3",
     "module-resolver": "^1.0.0",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.2",
+    "react-dom": "^15.6.2",
     "redux-mock-store": "^1.3.0",
     "rimraf": "^2.6.2",
     "webpack": "^3.6.0"
@@ -57,9 +56,11 @@
   "dependencies": {
     "@deskpro/apps-sdk-core": "^1.0.0-beta.25",
     "prop-types": "^15.6.0",
-    "react": "^15.6.1",
+    "raf": "^3.4.0",
+    "react": "^15.6.2",
     "react-redux": "^5.0.6",
     "react-svg-inline": "^2.0.1",
+    "react-test-renderer": "^15.6.2",
     "redux": "^3.7.2",
     "redux-form": "^7.0.4",
     "redux-thunk": "^2.2.0"
