--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@deskpro/apps-sdk-react",
   "version": "0.2.0",
-  "description": "A react-based javascript SDK for building DeskPRO Apps powered by the React library",
+  "description": "An SDK for building DeskPRO Apps powered by the React library.",
   "main": "lib/index.js",
   "private": false,
   "scripts": {
@@ -48,6 +48,7 @@
     "jsdoc-babel": "^0.3.0",
     "lint-staged": "^4.2.3",
     "module-resolver": "^1.0.0",
+    "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "redux-mock-store": "^1.3.0",
     "rimraf": "^2.6.2",
@@ -57,13 +58,15 @@
     "@deskpro/apps-sdk-core": "^1.0.0-beta.25",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
-    "react": "^15.6.2",
     "react-redux": "^5.0.6",
     "react-svg-inline": "^2.0.1",
     "react-test-renderer": "^15.6.2",
     "redux": "^3.7.2",
     "redux-form": "^7.0.4",
     "redux-thunk": "^2.2.0"
+  },
+  "peerDependencies": {
+    "react": "^15.6.2"
   },
   "jest": {
     "modulePaths": [
