--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "lint": "eslint src/* --cache --cache-location=.cache/eslint --ext .js,.jsx",
     "lint:fix": "npm run lint -- --fix",
     "precommit": "lint-staged",
-    "prepublish": "npm run build",
-    "postinstall": "rimraf node_modules/react"
+    "prepublish": "npm run build"
   },
   "author": "DeskPRO <team@deskpro.com>",
   "license": "BSD-3-Clause",
