--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "webpack": "^3.6.0"
   },
   "dependencies": {
-    "@deskpro/apps-sdk-core": "^1.0.0-beta.28",
+    "@deskpro/apps-sdk-core": "1.0.0-beta.28",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "react-redux": "^5.0.6",
