--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deskpro/apps-sdk-react",
-  "version": "1.0.0",
+  "version": "2.0.0-beta.1",
   "description": "An SDK for building DeskPRO Apps powered by the React library.",
   "main": "lib/index.js",
   "private": false,
@@ -38,6 +38,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^1.0.0",
     "documentation": "^5.3.2",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-15": "^1.0.1",
@@ -46,21 +47,22 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.0.1",
     "eslint-plugin-react": "^7.4.0",
-    "jest": "^21.2.1",
+    "jest": "^23.4.1",
     "jsdoc-babel": "^0.3.0",
     "lint-staged": "^4.2.3",
     "module-resolver": "^1.0.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
+    "react-svg-inline": "^2.1.1",
     "redux-mock-store": "^1.3.0",
     "rimraf": "^2.6.2",
     "webpack": "^3.6.0"
   },
   "dependencies": {
+    "@deskpro/apps-components": "^0.3.6",
     "prop-types": "^15.6.0",
     "raf": "^3.4.0",
     "react-redux": "^5.0.6",
-    "react-svg-inline": "^2.0.1",
     "react-test-renderer": "^15.6.2",
     "redux": "^3.7.2",
     "redux-form": "^7.0.4",
@@ -69,6 +71,26 @@
   "jest": {
     "modulePaths": [
       "src"
+    ],
+    "transform": {
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "mjs",
+      "js",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
     ]
   },
   "lint-staged": {
